Added Full Frontal w/ Samantha Bee

--- a/new_liptv.html
+++ b/new_liptv.html
@@ -114,6 +114,7 @@ YTNews = "https://www.youtube.com/embed/videoseries?list=PL3ZQ5CpNulQldOL3T8g8k1
 YT = "https://www.youtube.com/embed/videoseries?list=UUBR8-60-B28hp2BmDPdntcQ&autoplay=1;hl=en_US"
 PS = "https://www.youtube.com/embed/videoseries?list=UU-2Y8dQb0S6DtpxNgAKoJKA&autoplay=1;hl=en_US"
 Xbox = "https://www.youtube.com/embed/videoseries?list=UUjBp_7RuDBUYbd1LegWEJ8g&autoplay=1;hl=en_US"
+Bee = "https://www.youtube.com/embed/videoseries?list=UU18vz5hUUqxbGvym9ghtX_w&autoplay=1;hl=en_US"
 
 big_square1 = document.getElementsByTagName("big_square1");
 big_square1_img = big_square1[0].getElementsByTagName("img");
@@ -301,22 +302,23 @@ function Boxes(type) {
 		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 1)
 		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 2)
 		
-		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 3)
-		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 4)
-		SetSquare("<a href='javascript:Do_YT()'>Youtube Spotlight</a>", "yt.jpg", 5)
-		SetSquare("<a href='javascript:Do_YTNews()'>Top Stories on Youtube</a>", "news.jpg", 6)
-		SetSquare("<a href='javascript:Do_YTGame()'>Youtube Gaming</a>", "gaming.jpg", 7)
-		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 8)
-		SetSquare("<a href='javascript:Do_YTPop()'>Popular Right Now on Youtube</a>", "pop.jpg", 9)
-		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 10)
-		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 11)
-		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 12)
-		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 13)
-		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 14)
-		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 15)
-		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 16)
-		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 17)
+		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 3)
+		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 4)
+		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 5)
+		SetSquare("<a href='javascript:Do_YT()'>Youtube Spotlight</a>", "yt.jpg", 6)
+		SetSquare("<a href='javascript:Do_YTNews()'>Top Stories on Youtube</a>", "news.jpg", 7)
+		SetSquare("<a href='javascript:Do_YTGame()'>Youtube Gaming</a>", "gaming.jpg", 8)
+		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 9)
+		SetSquare("<a href='javascript:Do_YTPop()'>Popular Right Now on Youtube</a>", "pop.jpg", 10)
+		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 11)
+		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 12)
+		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 13)
+		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 14)
+		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 15)
+		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 16)
+		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 17)
 		
+		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 18)
 		SetSquare("<a href='javascript:Do_AS()'><white>Adult Swim Live Stream</white></a>", "stream.png", 18)
 		SetSquare("<a href='javascript:Do_Off()'>Off The Air</a>", "off.png", 18)
 		SetSquare("<a href='javascript:Do_Toonami()'><white>Toonami</white></a>", "toonami.png", 18)
@@ -392,19 +394,22 @@ function Boxes(type) {
 	}
 	if(type == "yt") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_YT()'>Youtube Spotlight</a>", "yt.jpg", 5)
-		SetSquare("<a href='javascript:Do_YTNews()'>Top Stories on Youtube</a>", "news.jpg", 6)
-		SetSquare("<a href='javascript:Do_YTGame()'>Youtube Gaming</a>", "gaming.jpg", 7)
-		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 8)
-		SetSquare("<a href='javascript:Do_YTPop()'>Popular Right Now on Youtube</a>", "pop.jpg", 9)
-		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 10)
-		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 11)
-		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 12)
-		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 13)
-		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 14)
-		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 15)
-		SetSquare("<a href='javascript:Do_LWT()'>Last Week Tonight</a>", "lwt.jpg", 16)
-		SetSquare("<a href='javascript:Do_Film()'>MovieClips Trailers</a>", "film.jpg", 17)
+		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 3)
+		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 4)
+		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 5)
+		SetSquare("<a href='javascript:Do_YT()'>Youtube Spotlight</a>", "yt.jpg", 6)
+		SetSquare("<a href='javascript:Do_YTNews()'>Top Stories on Youtube</a>", "news.jpg", 7)
+		SetSquare("<a href='javascript:Do_YTGame()'>Youtube Gaming</a>", "gaming.jpg", 8)
+		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 9)
+		SetSquare("<a href='javascript:Do_YTPop()'>Popular Right Now on Youtube</a>", "pop.jpg", 10)
+		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 12)
+		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 12)
+		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 13)
+		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 14)
+		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 15)
+		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 16)
+		SetSquare("<a href='javascript:Do_LWT()'>Last Week Tonight</a>", "lwt.jpg", 17)
+		SetSquare("<a href='javascript:Do_Film()'>MovieClips Trailers</a>", "film.jpg", 18)
 		SetSquare("<a href='javascript:Do_TV()'><white>JoeBlo TV Trailers</white></a>", "tv.jpg", 18)
 		SetSquare("<a href='javascript:Do_DC()'><white>DC Entertainment</white></a>", "dc.jpg", 19)
 		SetSquare("<a href='javascript:Do_Marvel()'><white>Marvel</white></a>", "marvel.jpg", 20)
@@ -470,21 +475,22 @@ function Boxes(type) {
 		}
 	if(type == "et") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 3)
-		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 4)
-		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 5)
-		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 6)
-		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 7)
-		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 8)
-		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 9)
-		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 10)
-		SetSquare("<a href='javascript:Do_AS()'><white>Adult Swim Live Stream</white></a>", "stream.png", 11)
-		SetSquare("<a href='javascript:Do_Off()'>Off The Air</a>", "off.png", 12)
-		SetSquare("<a href='javascript:Do_Toonami()'><white>Toonami</white></a>", "toonami.png", 13)
-		SetSquare("<a href='javascript:Do_Anima()'>Animation 24/7</a>", "anima.png", 14)
-		SetSquare("<a href='javascript:Do_Tim()'><white>Tim & Eric 24/7</white></a>", "tim.png", 15)
-		SetSquare("<a href='javascript:Do_Live()'><white>Adult Swim Live Action 24/7</white></a>", "live.png", 16)
-		SetSquare("<a href='javascript:Do_Venture()'><white>Venture Bros. 24/7</white></a>", "venture.png", 17)
+		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 3)
+		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 4)
+		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 5)
+		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 6)
+		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 7)
+		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 8)
+		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 9)
+		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 10)
+		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 11)
+		SetSquare("<a href='javascript:Do_AS()'><white>Adult Swim Live Stream</white></a>", "stream.png", 12)
+		SetSquare("<a href='javascript:Do_Off()'>Off The Air</a>", "off.png", 13)
+		SetSquare("<a href='javascript:Do_Toonami()'><white>Toonami</white></a>", "toonami.png", 14)
+		SetSquare("<a href='javascript:Do_Anima()'>Animation 24/7</a>", "anima.png", 15)
+		SetSquare("<a href='javascript:Do_Tim()'><white>Tim & Eric 24/7</white></a>", "tim.png", 16)
+		SetSquare("<a href='javascript:Do_Live()'><white>Adult Swim Live Action 24/7</white></a>", "live.png", 17)
+		SetSquare("<a href='javascript:Do_Venture()'><white>Venture Bros. 24/7</white></a>", "venture.png", 18)
 		SetSquare("<a href='javascript:Do_Ghost()'><white>Ghost Planet 24/7</white></a>", "ghost.png", 18)
 		SetSquare("<a href='javascript:Do_DCTV()'><white>DiamondClub.TV</white></a>", "dctv.jpg", 19)
 		SetSquare("<a href='javascript:Do_LWT()'>Last Week Tonight</a>", "lwt.jpg", 20)
@@ -1063,6 +1069,14 @@ function Do_Xbox() {
 	SetSquare("<a href='javascript:Do_YTSports()'>YouTube Sports</a>", "ytsports.jpg", "sugg3")
 	SetSquare("<a href='javascript:Do_Herd()'>The Herd</a>", "herd.jpg", "sugg4")
 	SetSquare("<a href='javascript:Do_ESPN()'>SportsNation</a>", "espn.jpg", "sugg5")
+}
+function Do_Bee() {
+	StartVideo(Bee)
+	SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", "sugg1")
+	SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", "sugg2")
+	SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", "sugg3")
+	SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", "sugg4")
+	SetSquare("<a href='javascript:Do_LWT()'>Last Week Tonight</a>", "lwt.jpg", "sugg5")
 }
 function SetGrid(how) {
 	if(how == "Live") {
