--- a/new_liptv.html
+++ b/new_liptv.html
@@ -59,7 +59,7 @@ ABC_News2 = "http://abcnews.go.com/video/embed?id=39180211";
 ABC_News3 = "http://abcnews.go.com/video/embed?id=39180111";
 CBSN = "http://www.cbsnews.com/live/compact/";
 Newsmax = "https://www.youtube.com/embed/a4uUEXZjigo?autoplay=1"
-FNC = "https://www.youtube.com/embed/videoseries?list=UUh5lcMAwoc17NvB56vjPwNg&autoplay=1;hl=en_US";
+FNC = "https://www.youtube.com/embed/videoseries?list=UU1GE0fWKcvdqMNOpBuNLLMw&autoplay=1;hl=en_US";
 CNN = "https://www.youtube.com/embed/videoseries?list=UUupvZG-5ko_eiXAupbDfxWw&autoplay=1;hl=en_US";
 MSNBC = "https://www.youtube.com/embed/videoseries?list=UUaXkIU1QidjPwiAYu6GcHjg&autoplay=1;hl=en_US";
 NBC_News = "https://www.youtube.com/embed/videoseries?list=UUeY0bbntWzzVIaj2z3QigXg&autoplay=1;hl=en_US";
@@ -120,6 +120,7 @@ BYU = "http://player.ooyala.com/static/v4/stable/4.9.8/skin-plugin/iframe.html?e
 Zil = "https://www.youtube.com/embed/videoseries?list=UUuKdWx8L8tGivbCwTElBjOw&autoplay=1;hl=en_US"
 Tim = "https://www.youtube.com/embed/videoseries?list=UUDYmrqySCqrHnah4LNUPt4w&autoplay=1;hl=en_US"
 Track = "https://www.youtube.com/embed/videoseries?list=UUjjQMyVYBxX9mTlC-Q1Wehw&autoplay=1;hl=en_US"
+TRMS = "https://www.youtube.com/embed/videoseries?list=UU4zeetgY4k2th5a3aLYn1JQ&autoplay=1;hl=en_US"
 
 big_square1 = document.getElementsByTagName("big_square1");
 big_square1_img = big_square1[0].getElementsByTagName("img");
