Fixed Multiple URLs

--- a/new_liptv.html
+++ b/new_liptv.html
@@ -76,8 +76,8 @@ Herd = "https://www.youtube.com/embed/videoseries?list=UUFDidMd82mpDkKijLUqHp7A&
 YTLive = "https://www.youtube.com/embed/videoseries?list=PLU12uITxBEPHOJO1FU8qll6gQmKcXp5S7&autoplay=1";
 YTSports = "https://www.youtube.com/embed/videoseries?list=PL8fVUTBmJhHKq0MhIplzljtGhHN2E_jk0&autoplay=1";
 Sky = "https://www.youtube.com/embed/y60wDzZt8yg?autoplay=1"
-Euronews = "https://www.youtube.com/embed/N7-YxjsHaIs?autoplay=1"
-Rap = "http://content.jwplatform.com/players/Jiv4SVjt-9MKg6C3E.html"
+Euronews = "https://www.youtube.com/embed/9n5mIRYXqgM?autoplay=1"
+Rap = "https://www.youtube.com/embed/videoseries?list=UUiX2Rczp5jvc0cvgAtqsuLA&autoplay=1;hl=en_US"
 Blaze = "https://www.youtube.com/embed/videoseries?list=UUKgJEs_v0JB-6jWb8lIy9Xw&autoplay=1;hl=en_US";
 OAN = "https://www.youtube.com/embed/videoseries?list=UUNbIDJNNgaRrXOD7VllIMRQ&autoplay=1;hl=en_US";
 TYT = "https://www.youtube.com/embed/videoseries?list=UU1yBKRuGpC1tSM73A0ZjYjQ&autoplay=1;hl=en_US";
